testsuite/tests/properties/invalid_bind_2/test.out
== val_var.lkt ==
val_var.lkt:4:35: error: Expected type LogicVar, got Example.entity
4 |     @export fun resolve(): Bool = %eq(self, node.var1).solve
  |                                   ^^^^^^^^^^^^^^^^^^^^


== var_bool.lkt ==
var_bool.lkt:4:35: error: Right operand must be either a logic variable or an entity, got Bool
4 |     @export fun resolve(): Bool = %eq(node.var1, true).solve
  |                                   ^^^^^^^^^^^^^^^^^^^^


== var_val.lkt ==
Code generation was successful

== var_var.lkt ==
Code generation was successful

lkt_compile: Done
